--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -889,8 +889,9 @@
         <div class="container mt-3">
           <div>
             <h1>Ojok Michael Ocan </h1>
-          </div>
-          
+          </div> 
+
+                 <!-- horizontal   -->
           <ul class="nav bg-danger text-white justify-content-end">
             <li class="nav-item ">
               <a class="nav-link" href="#"> Home </a>
@@ -900,9 +901,26 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"> Contact </a>
-            </li>
-            
+            </li>            
           </ul>
+          <!-- End of horizontal  -->
+
+          <!-- vertical nav -->
+          <ul class="nav flex-column bg-info text-white justify-content-start">
+            <li class="nav-item ">
+              <a class="nav-link" href="#"> Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Products </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Contact </a>
+            </li>            
+          </ul>
+
+          <!-- End of nav -->
+
+
 
         </div>
         <br>
