--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -920,6 +920,23 @@
 
           <!-- End of nav -->
 
+          <!-- navigation tabs -->
+          <ul class="nav nav-tabs">
+            <li class="nav-item ">
+              <a class="nav-link active" href="#"> Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Products </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Contact </a>
+            </li>   
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#"> Disabled Contact </a>
+            </li>          
+          </ul>
+          <!-- End of navigation tabs -->
+
 
 
         </div>
