--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -41,7 +41,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#" style="font-size: 23px;">
-                Contact
+                Contact / Contact
               </a>
             </li>
           </ul>
@@ -114,9 +114,6 @@
   <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
     <span class="carousel-control-next-icon"></span>
   </button>
-
- 
-
     </div>
 
  <!--  Keyboard elements -->
@@ -937,6 +934,24 @@
           </ul>
           <!-- End of navigation tabs -->
 
+          <!-- nav pills -->
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+
+          <!-- End of nav pills -->
+
 
 
         </div>
@@ -956,6 +971,9 @@
 
 </div>
 <!-- END OF CONTAINER -->
+<script>
+  console.log("Hello world");
+</script>
   
   
 
