--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -41,7 +41,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#" style="font-size: 23px;">
-                Ojok
+                Ojok Michael Ocan was here last here
               </a>
             </li>
           </ul>
