--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -10,10 +10,9 @@
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
-
   </head>
-<body>
 
+<body>
 <!-- START OF CONTAINER -->
 <header>
     <div class="container-fluid">
@@ -55,7 +54,7 @@
     <h1>My First Bootstrap Page</h1>
 
   <!-- mark -->
-  <p> Ojok Michael Ocan is <mark> You should take note </mark>  here  </p>
+  <p> Ojok Michael Ocan is winning millions of dollars <mark> You should take note </mark>  here  </p>
   
 <p>
   the <abbr title="World Health Organisation"> WHO </abbr> was founded in 1948.
