--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -54,7 +54,7 @@
     <h1>My First Bootstrap Page</h1>
 
   <!-- mark -->
-  <p> Ojok Michael <mark> You should take note </mark>  here  </p>
+  <p> Ojok Michael Ocan <mark> You should take note </mark>  here  </p>
   
 <p>
   the <abbr title="World Health Organisation"> WHO </abbr> was founded in 1948.
