--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -52,6 +52,7 @@
 <div class="container">
   <div class="row">
     <h1>My First Bootstrap Page</h1>
+    <h2> Ojok Michael Ocan </h2>
 
   <!-- mark -->
   <p> Ojok Michael Ocan <mark> You should take note </mark>  here  </p>
