--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -52,7 +52,6 @@
 <div class="container">
   <div class="row">
     <h1>My First Bootstrap Page</h1>
-    <h2> Ojok Michael Ocan </h2>
 
   <!-- mark -->
   <p> Ojok Michael Ocan <mark> You should take note </mark>  here  </p>
@@ -951,6 +950,20 @@
           </ul>
 
           <!-- End of nav pills -->
+
+          <!-- tabs with dropdown -->
+
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" href="#"> Active </a>
+            </li>
+            <li class="nav-item dropdown"> 
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"> Dropdown </a>
+             <li> <a class="dropdown-item" href="#"> Link 1 </a> </li>
+             <li> <a class="dropdown-item" href="#"> Link 2 </a> </li>
+             <li> <a class="dropdown-item" href="#"> Link 3</a> </li>
+            </li>
+          </ul>
 
 
 
