--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -957,11 +957,12 @@
             <li class="nav-item">
               <a class="nav-link active" href="#"> Active </a>
             </li>
-            <li class="nav-item dropdown"> 
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"> Dropdown </a>
-             <li> <a class="dropdown-item" href="#"> Link 1 </a> </li>
-             <li> <a class="dropdown-item" href="#"> Link 2 </a> </li>
-             <li> <a class="dropdown-item" href="#"> Link 3</a> </li>
+              <ul class="">
+
+              </ul> 
+
             </li>
           </ul>
 
