--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -959,10 +959,11 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"> Dropdown </a>
-              <ul class="">
-
-              </ul> 
-
+              <ul class="dropdown-menu">
+                <li> <a class="dropdown-item" href="#"> Link 1 </a></li>
+                <li> <a class="dropdown-item" href="#"> Link 2 </a></li>
+                <li> <a class="dropdown-item" href="#"> Link 3 </a> </li>
+              </ul>
             </li>
           </ul>
 
