--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -965,6 +965,12 @@
                 <li> <a class="dropdown-item" href="#"> Link 3 </a> </li>
               </ul>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Link </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#"> Disabled </a>
+            </li>
           </ul>
 
 
