--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -973,6 +973,19 @@
             </li>
           </ul>
 
+          <!-- Toggleable tabs -->
+          <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" data-bs-toggle="tab" href="#home"> Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-bs-toggle="" href="#menu"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-bs-toggle="tab" href="#"></a>
+            </li>
+          </ul>
+
 
 
         </div>
