--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -986,6 +986,18 @@
             </li>
           </ul>
 
+          <!-- Tab panes -->
+          <div class="tab-content">
+            <div id="home" class="container tab-pane active"> <br>
+              <h3> HOME </h3>
+              <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temport incidunt 
+                ut labore et dolore magna aliqua.
+              </P>
+
+            </div>
+
+          </div>
+
 
 
         </div>
