--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -988,12 +988,28 @@
 
           <!-- Tab panes -->
           <div class="tab-content">
+            <!-- home  -->
             <div id="home" class="container tab-pane active"> <br>
               <h3> HOME </h3>
               <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temport incidunt 
                 ut labore et dolore magna aliqua.
               </P>
+            </div>
+            
+            <!-- menu1 -->
+            <div id="menu1" class="container tab-pane active"> <br>
+              <h3> Menu 1 </h3>
+              <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temport incidunt 
+                ut labore et dolore magna aliqua.
+              </P>
+            </div>
 
+            <!-- menu2 -->
+            <div id="menu2" class="container tab-pane active"> <br>
+              <h3> Menu 2 </h3>
+              <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temport incidunt 
+                ut labore et dolore magna aliqua.
+              </P>
             </div>
 
           </div>
