--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1011,6 +1011,27 @@
           </div>
         </div>
 
+        <!-- Nav bar -->
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+          <div class="container-fluid">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="#"> Active </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> Link </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> Link </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> Link </a>
+              </li>
+            </ul>
+          </div>
+
+        </nav>
+
 
         
 
