--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1012,7 +1012,7 @@
         </div>
 
         <!-- Nav bar -->
-        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+        <nav class="navbar navbar-expand-sm bg-success navbar-light">
           <div class="container-fluid">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -1025,10 +1025,19 @@
                 <a class="nav-link" href="#"> Link </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> Link </a>
+                <a class="nav-link disabled" href="#"> Link </a>
               </li>
             </ul>
           </div>
+
+        </nav>
+<br>
+        <!-- nav-bar logo -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"> Logo </a>
+          </div>
+
 
         </nav>
 
