--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1039,7 +1039,17 @@
           </div>
         </nav>
 
-        <!--  -->
+        <br>
+
+        <!-- navbar brand with images -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"> 
+              <img src="images/personalimages/personal_pics/dopeboy2.jpg" alt="Ojok_Michael_Ocan" style="width:40px;" class="rounded-pill">
+            </a>
+          </div>
+        </nav>
+        <br>
 
 
         
