--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1051,6 +1051,37 @@
         </nav>
         <br>
 
+        <!-- navbar text -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <div class="container-fluid">
+            <span class="navbar-text"> Navbar text </span>
+          </div>
+        </nav>
+<br>
+        <!-- collapsible navbar -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"> Logo </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#"> Link </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"> Link </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"> Link </a>
+                </li>
+
+              </ul>
+
+            </div>
+          </div>
+        </nav>
 
         
 
