--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1102,12 +1102,11 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"> Dropdown </a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu bg-black">
                     <li> <a class="dropdown-item"  href="#"> Link </a></li>
                     <li> <a class="dropdown-item" href="#"> Another link </a> </li>
                     <li> <a class="dropdown-item" href="#"> A third link </a></li>
                   </ul>
-
                 </li>
               </ul>
 
