--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1109,8 +1109,14 @@
                   </ul>
                 </li>
               </ul>
-
             </div>
+          </div>
+        </nav>
+
+        <!-- navbar forms and buttons -->
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+          <div class="container-fluid">
+            <a href="#"></a>
 
           </div>
 
