--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1089,6 +1089,9 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
+
+            <br>
+
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
               <ul class="navbar-nav">
                 <li class="nav-item">
@@ -1113,10 +1116,13 @@
           </div>
         </nav>
 
+        <br>
+
         <!-- navbar forms and buttons -->
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
           <div class="container-fluid">
-            <a href="#"></a>
+            <a href="javascript:void(0)" class="navbar-brand">Logo </a>
+            <button class=""> </button>
 
           </div>
 
