--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1123,8 +1123,11 @@
           <div class="container-fluid">
             <a href="javascript:void(0)" class="navbar-brand">Logo </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar"> 
-              <span class=""> </span>
+              <span class="navbar-toggler-icon"> </span>
             </button>
+            <div class="collapse navbar-collapse" id="mynavbar">
+
+            </div>
 
           </div>
 
