--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1126,6 +1126,12 @@
               <span class="navbar-toggler-icon"> </span>
             </button>
             <div class="collapse navbar-collapse" id="mynavbar">
+              <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+
+                </li>
+
+              </ul>
 
             </div>
 
