--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1128,6 +1128,8 @@
             <div class="collapse navbar-collapse" id="mynavbar">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)" > Link </a>
+                  <a class="nav-link" href="javascript:void(0)"></a>
 
                 </li>
 
