--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1129,8 +1129,12 @@
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="javascript:void(0)" > Link </a>
-                  <a class="nav-link" href="javascript:void(0)"></a>
-
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)"> Link </a>
+                </li>
+                <li class="nav-item">
+                  
                 </li>
 
               </ul>
