--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1134,10 +1134,15 @@
                   <a class="nav-link" href="javascript:void(0)"> Link </a>
                 </li>
                 <li class="nav-item">
-                  
+                  <a class="nav-link" href="javascript:void(0)"> Link</a>                  
                 </li>
-
               </ul>
+              <form class="d-flex" action="">
+                <input class="form-control me-2" type="text" placeholder="Search">
+                <button class="btn btn-primary" type="button">
+                Search
+                </button>
+              </form>
 
             </div>
 
