--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1175,10 +1175,22 @@
 
     <!-- Carousel -->
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active">
-      </button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
       <button type="button" data-bs-target="#demo" data-bs-slide-to="1"> </button>
       <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+
+    </div>
+    <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/portfolio/websites/first_website.jpg" alt="Personal_website" class="d-block w-100">
+      </div>
+      <div class="carousel-item active">
+        <img src="images/portfolio/websites/first_website.jpg" alt="Personal_website" class="d-block w-100">
+      </div>
+      <div class="carousel-item active">
+        <img src="images/portfolio/websites/first_website.jpg" alt="Personal_website" class="d-block w-100">
+      </div>
 
     </div>
 
