--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1185,14 +1185,21 @@
       <div class="carousel-item active">
         <img src="images/portfolio/websites/first_website.jpg" alt="Personal_website" class="d-block w-100">
       </div>
-      <div class="carousel-item active">
+      <div class="carousel-item">
+        <img src="images/portfolio/websites/Mic_construction_company.jpg" alt="Personal_website" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
         <img src="images/portfolio/websites/first_website.jpg" alt="Personal_website" class="d-block w-100">
       </div>
-      <div class="carousel-item active">
-        <img src="images/portfolio/websites/first_website.jpg" alt="Personal_website" class="d-block w-100">
-      </div>
-
     </div>
+
+    <!-- left and right ontrols/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
 
     
         
