--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1233,7 +1233,16 @@
   </button>
 </div>
 
-<!--  -->
+<!-- Modal -->
+<!-- The modal component is a dialog box/popup window that is displayed on top of the current page; -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+
+</button>
+
+<!-- End of modal -->
+
+
+
 
 
 <!-- 
