--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1178,16 +1178,11 @@
 
   
   <!-- The slideshow/carousel -->
-
-
 <br>
 <br>
 <br>
 <br>
-
-
-
-    <!-- End of Carousel -->
+<!-- End of Carousel -->
    
   </div>
 </div>
@@ -1236,7 +1231,7 @@
 <!-- Modal -->
 <!-- The modal component is a dialog box/popup window that is displayed on top of the current page; -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-
+  Open modal
 </button>
 
 <!-- End of modal -->
