--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1233,6 +1233,9 @@
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
   Open modal
 </button>
+<div>
+  
+</div>
 
 <!-- End of modal -->
 
