--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1155,11 +1155,11 @@
      </nav>
   
      <!-- Fixed bottom  -->
-     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+     <!-- <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> Fixed top </a>
       </div>
-    </nav>
+    </nav> -->
     <!-- fixed bottom end -->
 <br>
     <!-- sticky top -->
@@ -1219,6 +1219,9 @@
     </div>
   </div>
   
+  
+  <br>
+  <br>
   <!-- Left and right controls/icons -->
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
@@ -1233,11 +1236,68 @@
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
   Open modal
 </button>
-<div>
-  
-</div>
+
+<!-- The modal -->
+
+<!-- <div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal header -->
+      <div class="modal-header">
+        <h4 class="modal-title"> Modal Heading </h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- modal body -->
+      <div class="modal-body">
+         <p> I would love to be one of the the greatest programmers to ever lived the earth </p>
+      </div>
+
+      <!-- modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal"> Close </button>
+      </div>      
+    </div>
+  </div>
+</div> -->
 
 <!-- End of modal -->
+
+<div class="container mt-3">
+  <h3>Fading modal example</h3>
+  <p> CLick on the button to open the modal </p>
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+    Open modal
+  </button>
+</div>
+<!-- The modal -->
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!--Modal Header  -->
+      <div class="modal-header">
+        <h4 class="modal-title"> Modal Heading </h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        Ojok Michael Ocan
+      </div>
+
+      <!-- Modal footer  -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal"> Close </button>
+      </div>
+
+
+    </div>
+
+  </div>
+
+</div>
 
 
 
