--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1411,6 +1411,13 @@
 <!-- modal dialogue scrollable -->
 
 
+
+<!-- Start of tooltips -->
+<!-- Tooltips  -->
+<button type="button" class="btn btn-primary" data-bs-toggle="tooltip" title="Hooray">
+  Hoover over me!
+</button>
+
 <!--  -->
 <script>
   console.log("Hello world");
@@ -1421,6 +1428,13 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // initialize tooltips
+      var tooltipTriggerList = [].slice.call(document.quesrySelectorAll('[data-bs-toggle="tooltip"]'))
+      var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl){
+        return new bootstrap.Tooltip(tooltipTriggerEl)
+      })
+    </script>
 
       
   </body>
