--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1414,11 +1414,25 @@
 
 <!-- Start of tooltips -->
 <!-- Tooltips  -->
-<button type="button" class="btn btn-primary" data-bs-toggle="tooltip" title="Hooray">
-  Hoover over me!
+<button type="button" class="btn btn-primary" data-bs-toggle="tooltip" title="Hooray!">
+  Hoover over me
 </button>
 
 <!--  -->
+
+<!-- Positioning tooltips -->
+<!-- data-bs-placement -->
+<a href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="Hooray!"> Top </a>
+<a href="#" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Hooray!"> Bottom </a>
+<a href="#" data-bs-toggle="tooltip" data-bs-placement="right" title="Hooray!"> Right </a>
+<a href="#" data-bs-toggle="tooltip" data-bs-placement="left" title="Hooray!"> Left </a>
+
+
+
+
+<!--  -->
+
+
 <script>
   console.log("Hello world");
 </script>
