--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1431,10 +1431,20 @@
 <!-- pop overs -->
 <!-- popovers appear when the user clicks on the element
  -->
- <button type="button" class="btn btn-primary" data-bs-toggle="popover" title="Popover Header" data-bs-content="Some content inside the popover">
-  Toggle popover
- </button>
+ <div class="container mt-3">
+  <h3>Popover Example</h3>
+  
+  <button type="button" class="btn btn-primary" data-bs-toggle="popover" title="Popover Header" data-bs-content="Some content inside the popover">
+    Toggle popover
+  </button>
+</div>
 
+<script>
+var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+  return new bootstrap.Popover(popoverTriggerEl)
+})
+</script>
 
 
 
@@ -1446,12 +1456,10 @@
 
 
  <!-- pop overs javascript, start -->
- <script>
-  var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-  var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-    return new bootstrap.Popover(popoverTriggerEl)
-  })
-  </script>
+ 
+
+
+
   <!-- End of popovers javascript -->
 
   <!-- console -->
