--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1439,6 +1439,28 @@
   </button>
 </div>
 
+<!-- Toasts
+Toasts are hidden by default -->
+<div class="toast show">
+  <div class="toast-header">
+    Toast Header
+    <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+  </div>
+  <div class="toast-body">
+    Some text inside the toast body
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
 <script>
 var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
 var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
