--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/carousel.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/carousel.html
@@ -94,14 +94,22 @@
   
 
   <!--  -->
-  <div class="container mt-3">
+  <!-- <div class="container mt-3">
     <h3>Popover Example</h3>
     
     <button type="button" class="btn btn-primary" data-bs-toggle="popover" title="Popover Header" data-bs-content="Some content inside the popover">
       Toggle popover
     </button>
-  </div>
+  </div> -->
   
+
+  <!-- Closing popovers  -->
+  <a href="#" title="Dismissible popover" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="Click anywhere in the document to close this popover"> Click me </a>
+
+ <!-- Hooverable popovers -->
+ <a href="#" title="Header" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="Popover text">Hover over me</a>
+
+
   <script>
   var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
   var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
