--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/carousel.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/carousel.html
@@ -110,6 +110,46 @@
  <a href="#" title="Header" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="Popover text">Hover over me</a>
 
 
+
+ <!-- toast -->
+ <div class="container mt-3">
+    <h3>Toast Example</h3>
+    <p>In this example, we use a button to show the toast message.</p>
+  
+    <button type="button" class="btn btn-primary" id="toastbtn"> Show toast </button>
+    <div class="toast">
+        <div toast-header>
+            <strong class="me-auto"> Toast Header </strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+        </div>
+    </div>
+    <div class="toast-body">
+        <p>
+            I am called Ojok Michael Ocan and I am a software developer and I would like to 
+        </p>
+
+    </div>      
+</div>
+ 
+  
+
+  <!-- script for the  -->
+  <script>
+  document.getElementById("toastbtn").onclick = function() {
+    var toastElList = [].slice.call(document.querySelectorAll('.toast'))
+    var toastList = toastElList.map(function(toastEl) {
+      return new bootstrap.Toast(toastEl)
+    })
+    toastList.forEach(toast => toast.show()) 
+  }
+  </script>
+  
+
+
+
+
+
+ <!-- toast -->
   <script>
   var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
   var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
