--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/carousel.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/carousel.html
@@ -184,6 +184,27 @@ The scrollable area-->
         </div>
     </div>
 
+    <!--  -->
+    <div class="offcanvas offcanvas-start" id="demo">
+        <div class="offcanvas-header">
+            <h1 class="offcanvas-title"> Heading </h1>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas">
+        </button>
+        </div>
+        <div class="offcanvas-body">
+            <p> Some text lorem ipsum. </p>
+            <p> Some text lorem ipsum. </p>
+            <p> Some text lorem ipsum. </p>
+        </div>
+    </div>
+    <div class="container-fluid mt-3">
+        <h3> Offcanvas Sidebar </h3>
+        <p> Offcanvas is similar to modal </p>
+        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+            Open Offcanvas Sidebar
+        </button>
+    </div>
+
 
 
 
