--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -1523,7 +1523,19 @@ Toasts are hidden by default -->
 <br>
 <!--  -->
 
+<!-- Utilities 
+can also be called Helper classes-->
+<span class="border"></span>
+<span class="border border-0"></span>
+<span class="border border-top-0"></span>
+<span class="border border-end-0"></span>
 
+<div class="container mt-3">
+  <span class="border border-1"></span>
+  <span class="border border-2"></span>
+  <span class="border border-3"></span>
+  <span class="border border-4"></span>
+</div>
 
 
 
