--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/carousel.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/carousel.html
@@ -230,35 +230,15 @@ The scrollable area-->
           Open Offcanvas Sidebar
         </button>
       </div>
-      
+
       <!--  -->
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      <div>
+        <span class="border border-1"></span>
+        <span class="border border-2"></span>
+        <span class="border border-3"></span>
+        <span class="border border-4"></span>
+      </div>
+      <!--  -->
 
 
 
