--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -43,7 +43,22 @@
 
 <!-- form-control
 is used to get proper form styling -->
-
+<form action="">
+  <div class="mb-3 mt-3">
+    <label for="email"> Email: </label>
+    <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+  </div>
+  <div class="mb-3">
+   <label for="pwd"> Password:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">           
+  </div>
+  <div class="form-check mb-3">
+    <label class="form-check-label">
+      <input type="checkbox" name="remember" class="form-check-input">
+    </label>
+  </div>
+  <button type="submit" class="btn btn-primary"> Submit </button>
+</form>
 
 
 </body>
