--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -60,6 +60,18 @@ is used to get proper form styling -->
   <button type="submit" class="btn btn-primary"> Submit </button>
 </form>
 
+<!-- form action -->
+<div class="mb-3 mt-3">
+  <label for="comment"> Comments: </label>
+  <textarea name="text" class="form-control" id="comment" cols="30" rows="5">
+    I am called Ojok Michael Ocan, son of the soil.
+  </textarea>
+</div>
+
+
+
+
+<!-- form action -->
 
 </body>
 </html>
