--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -67,11 +67,23 @@ is used to get proper form styling -->
     I am called Ojok Michael Ocan, son of the soil.
   </textarea>
 </div>
-
-
+<!-- form action -->
 
 
 <!-- form action -->
+<form action="">
+  <div class="row">
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Enter email" name="email">
+    </div>
+    <div class="col">
+      <input type="password" class="form-control" placeholder="Enter password" name="pswd">
+    </div>
+  </div>  
+</form>
+
+
+<!-- form action 2 -->
 
 </body>
 </html>
