--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -82,8 +82,16 @@ is used to get proper form styling -->
   </div>  
 </form>
 
-
 <!-- form action 2 -->
+<form action="#">
+  <input type="text" class="form-control form-control-lg" placeholder="Large input">
+  <input type="text" class="form-control mt-3" placeholder="Normal input" disabled>
+  <input type="text" class="form-control form-control-sm mt-3" placeholder="Read Only" readonly>
+</form>
+
+
+
+<!--  -->
 
 </body>
 </html>
