--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -88,10 +88,13 @@ is used to get proper form styling -->
   <input type="text" class="form-control mt-3" placeholder="Normal input" disabled>
   <input type="text" class="form-control form-control-sm mt-3" placeholder="Read Only" readonly>
 </form>
-
-
-
 <!--  -->
+
+<!-- color picker -->
+<form action="">
+  <label for="myColor" class="form-label"> Color picker </label>
+  <input type="color" class="form-control form-control-color" id="myColor" value="#CCCCCC" title="Choose a color">
+</form>
 
 </body>
 </html>
