--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -96,5 +96,20 @@ is used to get proper form styling -->
   <input type="color" class="form-control form-control-color" id="myColor" value="#CCCCCC" title="Choose a color">
 </form>
 
+<!-- Select menu -->
+<form action="">
+  <label for="sel1" class="form-label"> Select list (select one):</label>
+  <select name="sellist1" id="sel1" class="form-select">
+    <option>1</option>
+    <option>2</option>
+    <option>3</option>
+    <option>4</option>
+  </select>
+</form>
+
+
+<!-- select menu end -->
+
+
 </body>
 </html>
