--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -105,7 +105,23 @@ is used to get proper form styling -->
     <option>3</option>
     <option>4</option>
   </select>
+  <br>
+
 </form>
+
+<!-- data lists -->
+<form action="">
+  <label for="browser" class="form-label"> Choose your browser from the list: </label>
+  <input type="text" class="form-control" list="browsers" name="browser" id="browser"  >
+  <datalist id="browsers">
+  <option value="Edge">
+    <option value="Firefox">
+    <option value="Chrome">
+    <option value="Opera">
+    <option value="Safari">
+  </datalist>
+</form>
+
 
 
 <!-- select menu end -->
