--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -120,11 +120,15 @@ is used to get proper form styling -->
     <option value="Opera">
     <option value="Safari">
   </datalist>
+  <button type="submit" class="btn btn-primary mt-3"> Submit </button>
 </form>
 
-
-
 <!-- select menu end -->
+
+<!-- Check boxes and radio buttons -->
+<!-- 
+  checkboxes are used if you want the user to select anynumber of options from a list of preset options
+ -->
 
 
 </body>
