--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -129,6 +129,24 @@ is used to get proper form styling -->
 <!-- 
   checkboxes are used if you want the user to select anynumber of options from a list of preset options
  -->
+ <div class="container mt-3">
+  <form action="">
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="check1" name="option1" value="something" checked>
+      <label for="check1" class="form-check-label"> Option 1</label>
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="check2" name="option2" value="something">
+      <label class="form-check-label"> Option 2 </label>
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" disabled>
+      <label class="form-check-label" > Option 3</label>
+    </div>
+    <button type="submit" class="btn btn-primary mt-3"> Submit </button>
+  </form>
+
+ </div>
 
 
 </body>
