--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -145,8 +145,17 @@ is used to get proper form styling -->
     </div>
     <button type="submit" class="btn btn-primary mt-3"> Submit </button>
   </form>
-
  </div>
+ <!-- End of checkboxes -->
+
+ <!-- Toggle switches -->
+ <!-- Start of the toggle switches -->
+ <!-- form-switch and the form-check -->
+ <div class="form-check form-switch">
+  <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes" checked>
+  <label class="form-check-label" for="mySwitch"> Dark Mode </label>
+ </div>
+
 
 
 </body>
