--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -154,6 +154,7 @@ is used to get proper form styling -->
  <div class="form-check form-switch">
   <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes" checked>
   <label class="form-check-label" for="mySwitch"> Dark Mode </label>
+  <label class="form-check-label" for="mySwitch"> White Mode </label>
  </div>
 
 
