--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -157,6 +157,17 @@ is used to get proper form styling -->
   <label class="form-check-label" for="mySwitch"> White Mode </label>
  </div>
 
+ <!-- Distance range -->
+ <form action="/action_page.php">
+  <label for="customRange" class="form-label">Custom range</label>
+  <input type="range" class="form-range" id="customRange" name="points">
+  
+  <button type="submit" class="btn btn-primary mt-3">Submit</button>
+</form>
+<!-- distance range end -->
+
+
+
 
 
 </body>
