--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -161,10 +161,14 @@ is used to get proper form styling -->
  <form action="/action_page.php">
   <label for="customRange" class="form-label">Custom range</label>
   <input type="range" class="form-range" id="customRange" name="points">
-  
   <button type="submit" class="btn btn-primary mt-3">Submit</button>
 </form>
 <!-- distance range end -->
+
+<form action="">
+  <label for="customRange" class="form-label"> Custom Range </label>
+  <input type="range" class="form-range" id="customRange">
+</form>
 
 
 
