--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -167,7 +167,7 @@ is used to get proper form styling -->
 
 <form action="">
   <label for="customRange" class="form-label"> Custom Range </label>
-  <input type="range" class="form-range" id="customRange">
+  <input type="range" class="form-range" id="customRange" name="points" step="10">
 </form>
 
 
