--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -164,6 +164,11 @@ is used to get proper form styling -->
   <button type="submit" class="btn btn-primary mt-3">Submit</button>
 </form>
 <!-- distance range end -->
+<form action="">
+  <label for="customRange" class="form-label"> Custom range </label>
+  <input type="range" class="form-range" id="customRange" name="points" min="0" max="4">
+  <button type="submit" class="btn btn-primary mt-3"> Submit </button>
+</form>
 
 
 
