--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -170,6 +170,12 @@ is used to get proper form styling -->
   <button type="submit" class="btn btn-primary mt-3"> Submit </button>
 </form>
 
+<!-- input groups -->
+<form action="">
+  <div class="input-group">
+    <span class="input-group-text">@</span>
+    <input type="text" class="form-control" placeholder="Username">  </div>
+</form>
 
 
 
