--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -175,6 +175,10 @@ is used to get proper form styling -->
   <div class="input-group">
     <span class="input-group-text">@</span>
     <input type="text" class="form-control" placeholder="Username">  </div>
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Your Email">
+      <span class="input-group-text">@</span>
+    </div>
 </form>
 
 
