--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -177,7 +177,7 @@ is used to get proper form styling -->
     <input type="text" class="form-control" placeholder="Username">  </div>
     <div class="input-group">
       <input type="text" class="form-control" placeholder="Your Email">
-      <span class="input-group-text">@</span>
+      <span class="input-group-text">@example.com</span>
     </div>
 </form>
 
