--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -179,6 +179,7 @@ is used to get proper form styling -->
       <input type="text" class="form-control" placeholder="Your Email">
       <span class="input-group-text">@example.com</span>
     </div>
+    <button type="Submit" class="btn btn-primary"> Submit </button>
 </form>
 
 
