--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -171,16 +171,19 @@ is used to get proper form styling -->
 </form>
 
 <!-- input groups -->
-<form action="">
-  <div class="input-group">
-    <span class="input-group-text">@</span>
-    <input type="text" class="form-control" placeholder="Username">  </div>
+<div class="container mt-3">
+  <form action="">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Your Email">
-      <span class="input-group-text">@example.com</span>
-    </div>
-    <button type="Submit" class="btn btn-primary"> Submit </button>
-</form>
+      <span class="input-group-text">@</span>
+      <input type="text" class="form-control" placeholder="Username">  </div>
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Your Email">
+        <span class="input-group-text">@example.com</span>
+      </div>
+      <button type="Submit" class="btn btn-primary"> Submit </button>
+  </form>
+</div>
+
 
 
 
