--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -184,6 +184,12 @@ is used to get proper form styling -->
   </form>
 </div>
 
+<!--  -->
+<div class="container mt-3">
+  <div class="input-group-text">
+
+  </div>
+</div>
 
 
 
