--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -186,9 +186,8 @@ is used to get proper form styling -->
 
 <!--  -->
 <div class="container mt-3">
-  <div class="input-group-text">
+  <!-- Multiple inputs -->
 
-  </div>
 </div>
 
 
