--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -187,7 +187,18 @@ is used to get proper form styling -->
 <!--  -->
 <div class="container mt-3">
   <!-- Multiple inputs -->
-
+  <div class="input-group mb-3">
+    <div class="input-group-text">
+      <input type="checkbox">
+    </div>
+    <input type="text" class="form-control" placeholder="Some text">
+  </div>
+  <div class="input-group mb-3">
+    <div class="input-group-text">
+      <input type="radio">
+    </div>
+    <input type="text" class="form-control" placeholder="Some text">
+  </div>
 </div>
 
 
