--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -201,6 +201,16 @@ is used to get proper form styling -->
   </div>
 </div>
 
+<!-- input group buttons -->
+<div class="container mt-3">
+  <div class="input-group mb-3 mt-3">
+    <button class="btn btn-outline-primary" type="button"> Basic Button </button>
+    <input type="text" class="form-control" placeholder="Some text">
+  </div>
+
+</div>
+
+
 
 
 
