--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -207,6 +207,15 @@ is used to get proper form styling -->
     <button class="btn btn-outline-primary" type="button"> Basic Button </button>
     <input type="text" class="form-control" placeholder="Some text">
   </div>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Search">
+    <button class="btn btn-success" type="submit"> Go </button>
+  </div>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Something clever..">
+    <button class="btn btn-primary" type="button"> OK </button>
+    <button class="btn btn-danger" type="button"> Cancel</button>
+  </div>
 
 </div>
 
