--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -216,6 +216,18 @@ is used to get proper form styling -->
     <button class="btn btn-primary" type="button"> OK </button>
     <button class="btn btn-danger" type="button"> Cancel</button>
   </div>
+</div>
+
+<!-- input group with dropdown buttons -->
+<div class="container mt-3">
+  <div class="input-group mt-3 mb-3">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+      Dropdown button
+    </button>
+
+  </div>
+
+
 
 </div>
 
