--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -224,6 +224,11 @@ is used to get proper form styling -->
     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
       Dropdown button
     </button>
+    <ul class="dropdown-menu">
+      <li> <a class="dropdown-item" href="#"> Link 1 </a></li>
+      <li> <a class="dropdown-item" href="#"></a> </li>
+
+    </ul>
 
   </div>
 
