--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -226,9 +226,10 @@ is used to get proper form styling -->
     </button>
     <ul class="dropdown-menu">
       <li> <a class="dropdown-item" href="#"> Link 1 </a></li>
-      <li> <a class="dropdown-item" href="#"></a> </li>
-
+      <li> <a class="dropdown-item" href="#"> Link 2 </a> </li>
+      <li> <a class="dropdown-item" href="#"> Link 3 </a> </li>
     </ul>
+    <input type="text" class="form-control" placeholder="Username">
 
   </div>
 
