--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -230,12 +230,24 @@ is used to get proper form styling -->
       <li> <a class="dropdown-item" href="#"> Link 3 </a> </li>
     </ul>
     <input type="text" class="form-control" placeholder="Username">
-
   </div>
-
-
-
 </div>
+
+<!-- Floating labels/ Animated labels -->
+<div class="container mt-3">
+  <form action="#">
+    <div class="form-floating mb-3 mt-3">
+      <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
+      <label for="email"> Email </label>
+    </div>
+    <div class="form-floating mt-3 mb-3">
+      <input type="text" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+      <label for="pwd"> Password </label>
+    </div>
+    <button type="submit" class="btn btn-primary"> Submit </button>
+  </form>
+</div>
+
 
 
 
