--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -248,6 +248,19 @@ is used to get proper form styling -->
   </form>
 </div>
 
+<!-- floating labels / textarea -->
+
+  <div class="contianer mt-3">
+    <form action="#">
+      <div class="form-floating mb-3 mt-3">
+        <textarea class="form-control" name="text" id="comment" cols="30" rows="10" placeholder="Comment goes here"></textarea>
+        <label for="comment"> Comments </label>
+      </div>
+      <button type="submit" class="btn btn-primary"> Submit </button>
+    </form>
+
+  </div>
+
 
 
 
