--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -260,7 +260,22 @@ is used to get proper form styling -->
     </form>
   </div>
 
+<!-- floating labels - select -->
+<div class="container mt-3">
+  <form action="#">
+    <div class="form-floating mb-3 mt-3">
+      <select name="sellist" id="sel1" class="form-select">
+        <option value="">1</option>
+        <option value="">2</option>
+        <option value="">3</option>
+        <option value="">4</option>        
+      </select>
+      <label for="sel1" class="form-label"> Select list (select one):</label>
+    </div>
+    <button type="Submit" class="btn btn-primary"> Submit </button>
+  </form>
 
+</div>
 
 
 
