--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -274,11 +274,20 @@ is used to get proper form styling -->
     </div>
     <button type="Submit" class="btn btn-primary"> Submit </button>
   </form>
-
 </div>
 
+<div class="container mt-3">
+  <form action="#" class="was-validated">
+    <div class="mb-3 mt-3">
+      <label for="uname" class="form-label"> Username: </label>
+      <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
+      <div class="valide-feedback">Valid.</div>
+      <div>Please fill out this field </div>
 
+    </div>
+  </form>
 
+</div>
 
 
 </body>
