--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -282,10 +282,16 @@ is used to get proper form styling -->
       <label for="uname" class="form-label"> Username: </label>
       <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
       <div class="valide-feedback">Valid.</div>
-      <div>Please fill out this field </div>
-
+      <div class="invalid-feedback">Please fill out this field </div>
+    </div>
+    <div class="mb-3">
+      <label for="pwd" class="form-label">Password:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
+      <div class="valid-feedback">Valid.</div>
+      <div class="invalid-feedback">Please fill out this field.</div>
     </div>
   </form>
+  
 
 </div>
 
