--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/michael.html
@@ -292,9 +292,11 @@ is used to get proper form styling -->
     </div>
     <div class="form-check mb-3">
       <input class="form-check-input" type="checkbox" id="myCheck" name="remember" required>
-      <label for="myCheck" class=""></label>
-
+      <label for="myCheck" class="form-check-label"> I agree to this </label>
+      <div class="valid-feedback">Valid.</div>
+      <div class="invalid-feedback">Check this checkbox to continue.</div>
     </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
 
